#1 Use comma-separated ArgoCD annotations

--- a/k8s/helm/templates/restart-hooks.yaml
+++ b/k8s/helm/templates/restart-hooks.yaml
@@ -1,75 +1,56 @@
-{{ $values := .Values }}
-{{ $releaseNamespace := .Release.Namespace }}
-
-# For ArgoCD, we need two jobs
-# since we can't annotate multiple hook types on one job
-{{ $hooks := list
-              (dict
-                "name" "post-sync"
-                "annotations" (dict
-                  "argocd.argoproj.io/hook" "PostSync"
-                  "helm.sh/hook" "post-install"
-                  "helm.sh/hook-delete-policy" "hook-succeeded"))
-              (dict
-                "name" "post-delete"
-                "annotations" (dict
-                  "argocd.argoproj.io/hook" "PostDelete"
-                  "helm.sh/hook" "post-delete"
-                  "helm.sh/hook-delete-policy" "hook-succeeded")) }}
-
-{{ range $hooks }}
-
-{{ $name := get . "name" }}
-{{ $annotations := get . "annotations" | toYaml | nindent 4 }}
-
+{{ $annotations := dict
+                  "argocd.argoproj.io/hook" "PostSync,PostDelete"
+                  "helm.sh/hook" "post-install,post-delete"
+                  "helm.sh/hook-delete-policy" "hook-succeeded"
+                    | toYaml | nindent 4 }}
+{{ $hookName := "external-monitoring-restart-prometheus-hook"}}
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: external-monitoring-restart-prometheus-{{ $name }}
+  name: {{ $hookName }}
   annotations: {{ $annotations }}
 spec:
   template:
     metadata:
-      name: external-monitoring-restart-prometheus-{{ $name }}
+      name: {{ $hookName }}
     spec:
       restartPolicy: Never
-      serviceAccountName: external-monitoring-restart-prometheus-{{ $name }}
+      serviceAccountName: {{ $hookName }}
       containers:
         - name: restart-prometheus
-          image: {{ $values.images.kubectl }}
+          image: {{ .Values.images.kubectl }}
           command: [ kubectl, rollout, restart,
-                     "{{ $values.prometheus.kind }}",
-                     --selector={{ $values.prometheus.selector }},
-                     -n, {{ $releaseNamespace }} ]
+                     "{{ .Values.prometheus.kind }}",
+                     --selector={{ .Values.prometheus.selector }},
+                     -n, {{ .Release.Namespace }} ]
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: external-monitoring-restart-prometheus-{{ $name }}
+  name: {{ $hookName }}
   annotations: {{ $annotations }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: external-monitoring-restart-prometheus-{{ $name }}
+  name: {{ $hookName }}
   annotations: {{ $annotations }}
 rules:
   - apiGroups: [ apps ]
     verbs: [ list, patch ]
-    resources: [ {{ $values.prometheus.kind }}s ]
+    resources: [ {{ .Values.prometheus.kind }}s ]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: external-monitoring-restart-prometheus-{{ $name }}
+  name: {{ $hookName }}
   annotations: {{ $annotations }}
 subjects:
   - kind: ServiceAccount
-    name: external-monitoring-restart-prometheus-{{ $name }}
-    namespace: {{ $releaseNamespace }}
+    name: {{ $hookName }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: external-monitoring-restart-prometheus-{{ $name }}
+  name: {{ $hookName }}
 ---
-{{ end }}
